--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
   </head>
   <body>
 
+      <canvas id="myCanvas"></canvas>
+      <script src="js/script.js" type="text/javascript">
+
+      </script>
   </body>
 </html>
