--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Breakout Game</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
 
-      <canvas id="myCanvas"></canvas>
-      
+      <canvas id="myCanvas" width="480" height="320"></canvas>
+
       <script src="js/script.js" type="text/javascript">
 
       </script>
