--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
       <canvas id="myCanvas" width="480" height="320"></canvas>
 
-      <script src="js/script.js" type="text/javascript">
+      <!-- <script src="js/script.js" type="text/javascript"> -->
+      <script src="js/script2.js" type="text/javascript">
 
       </script>
   </body>
